crates/mysql/tests/binlog_protocol/snapshots/binlog_protocol_replay_captured__mariadb_11_4_basic_events.snap
---
source: crates/mysql/tests/binlog_protocol/replay_captured.rs
assertion_line: 30
expression: snapshot
---
[
  {
    "kind": "FormatDescription",
    "checksum_alg": 0
  },
  {
    "kind": "Gtid",
    "gtid": "MariaDb { domain_id: 0, server_id: 1, sequence: 6 }"
  },
  {
    "kind": "Query",
    "database": "bcd_fixture",
    "query_prefix": "CREATE TABLE wire_fixture (\n    "
  },
  {
    "kind": "Gtid",
    "gtid": "MariaDb { domain_id: 0, server_id: 1, sequence: 7 }"
  },
  {
    "kind": "TableMap",
    "database": "bcd_fixture",
    "table": "wire_fixture"
  },
  {
    "kind": "Rows",
    "table": "wire_fixture",
    "row_op": "insert",
    "cells": [
      1,
      "pk-alpha",
      -9223372036854775807,
      "12345.67890",
      3.141590118408203,
      "hello-binlog",
      "{\"a\":1,\"b\":\"two\"}",
      "1",
      "3",
      "aa",
      2024,
      {
        "day": 15,
        "month": 6,
        "year": 2024
      },
      {
        "hour": -994,
        "micros": 500,
        "minute": 18,
        "second": 0
      },
      {
        "day": 15,
        "hour": 10,
        "micros": 123,
        "minute": 30,
        "month": 6,
        "second": 0,
        "year": 2024
      },
      678260070000,
      "ޭ��\u0001#Eg",
      "000000000101000000000000000000f03f0000000000000040"
    ],
    "zero_log_pos": true
  },
  {
    "kind": "Xid",
    "xid": "xid=21"
  },
  {
    "kind": "Gtid",
    "gtid": "MariaDb { domain_id: 0, server_id: 1, sequence: 8 }"
  },
  {
    "kind": "TableMap",
    "database": "bcd_fixture",
    "table": "wire_fixture"
  },
  {
    "kind": "Rows",
    "table": "wire_fixture",
    "row_op": "update",
    "before": [
      1,
      "pk-alpha",
      -9223372036854775807,
      "12345.67890",
      3.141590118408203,
      "hello-binlog",
      "{\"a\":1,\"b\":\"two\"}",
      "1",
      "3",
      "aa",
      2024,
      {
        "day": 15,
        "month": 6,
        "year": 2024
      },
      {
        "hour": -994,
        "micros": 500,
        "minute": 18,
        "second": 0
      },
      {
        "day": 15,
        "hour": 10,
        "micros": 123,
        "minute": 30,
        "month": 6,
        "second": 0,
        "year": 2024
      },
      678260070000,
      "ޭ��\u0001#Eg",
      "000000000101000000000000000000f03f0000000000000040"
    ],
    "after": [
      1,
      "pk-alpha",
      -9223372036854775807,
      "99999.99000",
      3.141590118408203,
      "updated",
      "{\"a\":1,\"b\":\"two\"}",
      "2",
      "6",
      "aa",
      2024,
      {
        "day": 15,
        "month": 6,
        "year": 2024
      },
      {
        "hour": -994,
        "micros": 500,
        "minute": 18,
        "second": 0
      },
      {
        "day": 15,
        "hour": 10,
        "micros": 123,
        "minute": 30,
        "month": 6,
        "second": 0,
        "year": 2024
      },
      678260070000,
      "ޭ��\u0001#Eg",
      "000000000101000000000000000000f03f0000000000000040"
    ],
    "zero_log_pos": true
  },
  {
    "kind": "Xid",
    "xid": "xid=22"
  },
  {
    "kind": "Gtid",
    "gtid": "MariaDb { domain_id: 0, server_id: 1, sequence: 9 }"
  },
  {
    "kind": "TableMap",
    "database": "bcd_fixture",
    "table": "wire_fixture"
  },
  {
    "kind": "Rows",
    "table": "wire_fixture",
    "row_op": "delete",
    "cells": [
      1,
      "pk-alpha",
      -9223372036854775807,
      "99999.99000",
      3.141590118408203,
      "updated",
      "{\"a\":1,\"b\":\"two\"}",
      "2",
      "6",
      "aa",
      2024,
      {
        "day": 15,
        "month": 6,
        "year": 2024
      },
      {
        "hour": -994,
        "micros": 500,
        "minute": 18,
        "second": 0
      },
      {
        "day": 15,
        "hour": 10,
        "micros": 123,
        "minute": 30,
        "month": 6,
        "second": 0,
        "year": 2024
      },
      678260070000,
      "ޭ��\u0001#Eg",
      "000000000101000000000000000000f03f0000000000000040"
    ],
    "zero_log_pos": true
  },
  {
    "kind": "Xid",
    "xid": "xid=23"
  },
  {
    "kind": "Gtid",
    "gtid": "MariaDb { domain_id: 0, server_id: 1, sequence: 10 }"
  },
  {
    "kind": "TableMap",
    "database": "bcd_fixture",
    "table": "wire_fixture"
  },
  {
    "kind": "Rows",
    "table": "wire_fixture",
    "row_op": "insert",
    "cells": [
      2,
      "txn-two",
      42,
      "1.00000",
      1.5,
      "txn-a",
      "{\"a\":1,\"b\":\"two\"}",
      "1",
      "1",
      "0f",
      2023,
      {
        "day": 1,
        "month": 1,
        "year": 2023
      },
      {
        "hour": 49,
        "micros": 0,
        "minute": 2,
        "second": 0
      },
      {
        "day": 1,
        "hour": 1,
        "micros": 0,
        "minute": 2,
        "month": 1,
        "second": 3,
        "year": 2023
      },
      13480035000,
      "\u0001\u0002\u0003\u0004",
      "00000000010100000000000000000008400000000000001040"
    ],
    "zero_log_pos": true
  },
  {
    "kind": "TableMap",
    "database": "bcd_fixture",
    "table": "wire_fixture"
  },
  {
    "kind": "Rows",
    "table": "wire_fixture",
    "row_op": "insert",
    "cells": [
      3,
      "txn-thr",
      43,
      "2.00000",
      2.5,
      "txn-b",
      "{\"a\":1,\"b\":\"two\"}",
      "2",
      "2",
      "f0",
      2022,
      {
        "day": 2,
        "month": 2,
        "year": 2022
      },
      {
        "hour": 66,
        "micros": 0,
        "minute": 2,
        "second": 0
      },
      {
        "day": 2,
        "hour": 2,
        "micros": 0,
        "minute": 3,
        "month": 2,
        "second": 4,
        "year": 2022
      },
      2160720225000,
      "\u0005\u0006\u0007\b",
      "00000000010100000000000000000014400000000000001840"
    ],
    "zero_log_pos": true
  },
  {
    "kind": "TableMap",
    "database": "bcd_fixture",
    "table": "wire_fixture"
  },
  {
    "kind": "Rows",
    "table": "wire_fixture",
    "row_op": "update",
    "before": [
      2,
      "txn-two",
      42,
      "1.00000",
      1.5,
      "txn-a",
      "{\"a\":1,\"b\":\"two\"}",
      "1",
      "1",
      "0f",
      2023,
      {
        "day": 1,
        "month": 1,
        "year": 2023
      },
      {
        "hour": 49,
        "micros": 0,
        "minute": 2,
        "second": 0
      },
      {
        "day": 1,
        "hour": 1,
        "micros": 0,
        "minute": 2,
        "month": 1,
        "second": 3,
        "year": 2023
      },
      13480035000,
      "\u0001\u0002\u0003\u0004",
      "00000000010100000000000000000008400000000000001040"
    ],
    "after": [
      2,
      "txn-two",
      42,
      "1.00000",
      1.5,
      "txn-upd",
      "{\"a\":1,\"b\":\"two\"}",
      "1",
      "1",
      "0f",
      2023,
      {
        "day": 1,
        "month": 1,
        "year": 2023
      },
      {
        "hour": 49,
        "micros": 0,
        "minute": 2,
        "second": 0
      },
      {
        "day": 1,
        "hour": 1,
        "micros": 0,
        "minute": 2,
        "month": 1,
        "second": 3,
        "year": 2023
      },
      13480035000,
      "\u0001\u0002\u0003\u0004",
      "00000000010100000000000000000008400000000000001040"
    ],
    "zero_log_pos": true
  }
]
